@@ -14,6 +14,8 @@ Verison 7,3  [ (to be determined) ]
             - Added isConjugacyMinimal() to the generic Perm<n> class.
               Note that this routine was already present in the specialised
               classes for smaller n.
+            - Switched the generic Perm<n>::sign() from a low-overhead
+              quadratic algorithm to a higher-overhead linear algorithm.
 
 Version 7.2  [ 28 October, 2022 ]
 
